# AVRD

./: CMakeLists.txt  LICENSE  README.md
Source/App/: AudioImportManager.h  AudioSettingsComponent.h  AudioSettingsDialog.h  DragAndDropComponent.h  MainComponent.h  MainMenuBar.h  MainWindow.h  PlaylistComponent.h  TimelineComponent.h  TransportComponent.h  main.cpp
Source/UI/: Colors.h  LookAndFeel.h
Source/UI/Panels/: BrowserPanel.h  Playhead.h  PlaylistPanel.h  TimelineHeader.h  TrackLane.h  TransportPanel.h
